

# Include the main library code ------------------------------------------------
add_subdirectory(src)
# ------------------------------------------------------------------------------

# Include the examples ---------------------------------------------------------
add_subdirectory(examples)
# ------------------------------------------------------------------------------
